Refactor PC and fix minor bugs